--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-  "name": "paintingblog-client",
+  "name": "painting-blog-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "4.0.0",
+    "@graphql-codegen/add": "3.1.0",
+    "@graphql-codegen/cli": "2.1.0",
+    "@graphql-codegen/typescript": "2.1.0",
+    "@graphql-codegen/typescript-operations": "2.1.0",
+    "@graphql-codegen/typescript-react-apollo": "3.1.0",
+    "@material-ui/core": "4.12.1",
+    "@material-ui/icons": "4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/history": "4.7.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "5.1.8",
+    "@types/styled-components": "5.1.11",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
+    "apollo-link-context": "1.0.20",
+    "apollo-link-error": "1.1.13",
+    "apollo-link-http": "1.5.17",
+    "apollo-link-retry": "2.2.16",
+    "apollo-link-ws": "1.0.20",
+    "apollo-utilities": "1.3.4",
+    "graphql": "15.5.1",
+    "graphql-tag": "2.12.5",
+    "history": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "2.9.0",
+    "react-router-dom": "5.2.0",
+    "react-router-transition": "2.1.0",
     "react-scripts": "4.0.3",
+    "styled-components": "5.3.0",
+    "subscriptions-transport-ws": "0.9.19",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "codegen": "graphql-codegen",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +68,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@apollo/link-context": "2.0.0-beta.3",
+    "@graphql-codegen/cli": "2.1.0",
+    "apollo-link-mock": "1.0.1"
   }
 }
